--- a/signUp.html
+++ b/signUp.html
@@ -11,11 +11,12 @@
         <input type="submit" value="Upload">
     </form> -->
     <form action="index.php" method="post">
-        <h3>Log in</h3>
+        <h3>Sign Up</h3>
+        Email: <input type="email" name="email" id="" required><br>
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
-        <input type="submit" value="Login" name="logIn" required>
-        <a href="signUp.html">signUp</a>
+        <input type="submit" value="signUp" name="signUp" required>
+        <a href="index.html">log In</a>
     </form>
 </body>
 </html>
